Topbar updated with close and minimize and maximize functionality

--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ body{
 }
 @media (max-width: 750px) {
   #main_menu_windows {
-    display: flex;
+    /* display: flex; */
     width: 100vw;
     height: calc(100dvh - 40px);
     flex-direction: column;
