--- a/css/settings_app.css
+++ b/css/settings_app.css
@@ -1,5 +1,5 @@
 .move-able {
-  border: 3px solid green;
+  /* border: 1px solid rgba(128, 128, 128, 0.473); */
   transition: 0ms;
   position: fixed;
   overflow: auto;
@@ -16,7 +16,9 @@
   background-color: crimson;
 }
 #third-app {
-  background-color: olivedrab;
+  /* background-color: olivedrab; */
+  background-color: white;
+  color: black;
 }
 .application_main_body {
   margin-top: 35px;
@@ -25,10 +27,11 @@
   display: flex;
 }
 .topBar {
-  background-color: teal;
+  background-color: rgb(0, 0, 0);
+  backdrop-filter: blur(20px);
   position: absolute;
   height: 35px;
-  cursor: move;
+  /* cursor: move; */
   width: 100%;
   top: 0px;
   display: flex;
@@ -38,6 +41,7 @@
 .topBar h5 {
   margin-left: 15px;
   font-weight: 400;
+  color: white;
 }
 .navigations {
   display: flex;
@@ -45,13 +49,21 @@
 .topBar .navigation_options {
   height: 35px;
   width: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
-.close {
+.navigation_options img {
+  width: 14px;
+  transition: .1s ease;
+}
+.navigation_options:hover img {
+  width: 18px;
+}
+.close:hover {
   background-color: red;
 }
-.maximize {
-  background-color: white;
-}
-.minimize {
-  background-color: orange;
+.maximize:hover,.minimize:hover  {
+  background-color: rgba(255, 255, 255, 0.434);
 }
